                '-(_)-(_)----'v'-(_)--'
       jgs-----------------------------------------------------------------

################
# + additions
# * changes
# ! known issues
# x fixes
################

====================================
=== v1.3 : August 30, 2020 ===
+ implemented "last message repeats" for repetetive log entries.
+ !block is now a valid config item. 
+ closing dnwfw with block=1 will result in a 0.0.0.0:ssh port being opened till restart of service.
+ 0.0.0.0 has been added as a wild host in config to allow all ips to access listed ports.
* while 0.0.0.0 is a valid dns name in configuration, 0.0.0.0 will not be allowed in dns lookups and will be rejected.
* updated configuration. read UPGRADES file.
* config: !fork has been deprecated.
* code cleanup

x fixed a buffer overflow in debug code.
x fixed issue with make install not creating /etc/bacon

====================================
=== v1.2.0-rc1 : August 30, 2019 ===
+ we try to log to /var/log/dnsfw.log by default.
+ we install to /usr/sbin/ by default.
+ we are now able to use systemd as a service.
+ makefile now supports make install && make service
+ added CHANGES like a real application.
+ added UPGRADES file.

* config keys are more verbose
* cycle timer increased from 1 minute to 2.
* we no longer fork by default due to systemd (see -f startup flag)
* debug level can now be set in config.
* config file is not backwards compatible.
* config and log files are now dnsfw.conf and .log, dropping the d.
* Makefile now specifies std=gnu99 during build.

! extra spaces in config file causes incorrect parsing as a wildcard.
! reload via HUP only works once; usurped due to systemctl usage instead.
x better sanitization of hostname characters in config

======================================
=== v1.0.1-alpha2 : August 5, 2019 ===
x fixed an issue that prevented compile in some gcc versions.

! this changelog is not present in this version, haha