@@ -17,11 +17,11 @@
 //#define IPTABLES_BINARY2 "/sbin/iptables"
 
 // default ip table rules
-#define IPTF_DEFAULT_ESTABLISHED "iptables -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT\n"
-#define IPTF_DEFAULT_OUTBOUND "iptables -A OUTPUT -j ACCEPT\n"
-#define IPTF_DEFAULT_ICMP "iptables -A INPUT -p icmp -j ACCEPT\n"
-#define IPTF_DEFAULT_REJECT_INPUT "iptables -A INPUT -j REJECT\n"
-#define IPTF_DEFAULT_REJECT_FORWARD "iptables -A FORWARD -j REJECT\n"
+#define IPTF_DEFAULT_ESTABLISHED "iptables -%s INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT\n"
+#define IPTF_DEFAULT_OUTBOUND "iptables -%s OUTPUT -j ACCEPT\n"
+#define IPTF_DEFAULT_ICMP "iptables -%s INPUT -p icmp -j ACCEPT\n"
+#define IPTF_DEFAULT_REJECT_INPUT "iptables -%s INPUT -j REJECT\n"
+#define IPTF_DEFAULT_REJECT_FORWARD "iptables -%s FORWARD -j REJECT\n"
 
 void iptables_add(char *ip, int port);
 void iptables_del(char *ip, int port);// full applies to both protocols
