@@ -1,7 +1,7 @@
 /*                                                       )
           ,%,                                     ) _(___[]_
-          %%%,&&&, dnsfw.bacon.place   ,%%,      (;`       /\
-          %Y/%&&&&  rlynk@bacon.place  %%%%   ___/_____)__/ _\__     ,%%,
+          %%%,&&&, dnsfw.3rad.ca       ,%%,      (;`       /\
+          %Y/%&&&&  rlynk@3rad.ca      %%%%   ___/_____)__/ _\__     ,%%,
         ^^^||^&\Y&^^^^^^^^^^^^^^^^^^^^^%Y/%^^/ (_()   (  | /____/\^^^%%%%^^
           `    || _,..=xxxxxxxxxxxx,    ||   |(' |LI (.)I| | LI ||   %\Y%
          -=      /L_Y.-"""""""""`,-n-. `    @'---|__||___|_|____||_   ||
