@@ -21,7 +21,7 @@
 === v1.3 : August 30, 2020 ===
 + implemented "last message repeats" for repetetive log entries.
 + !block is now a valid config item. 
-+ closing dnwfw with block=1 will result in a 0.0.0.0:ssh port being opened till restart of service.
++ closing dnsfw will revert the firewall back to its natural state.
 + 0.0.0.0 has been added as a wild host in config to allow all ips to access listed ports.
 * while 0.0.0.0 is a valid dns name in configuration, 0.0.0.0 will not be allowed in dns lookups and will be rejected.
 * updated configuration. read UPGRADES file.
@@ -29,6 +29,7 @@
 * code cleanup
 
 x fixed a buffer overflow in debug code.
+x fixed a bug not allowing numbers in hostnames *faceplant*
 x fixed issue with make install not creating /etc/bacon
 
 ====================================
